--- a/Plugin/data/lang/amxbans.txt
+++ b/Plugin/data/lang/amxbans.txt
@@ -15,7 +15,7 @@ SQL_LOADED_REASONS = %d Reasons loaded from Database.
 SQL_MENU_ONLINE_01 = AMXBans Menu %s is online (1 reason loaded)
 SQL_MENU_ONLINE_02 = AMXBans Menu %s is online (%d reasons loaded)
 SQL_CANT_CON = ERROR: Cannot connect to SQL!
-PLAYER_BANNED_BEFORE = (ADMINS) %s (%s) has been banned %i time%s before.
+PLAYER_BANNED_BEFORE = (ADMINS) %s (%s) have been banned %i time%s before.
 ALREADY_BANNED = Player is already banned.
 PERMANENT = permanent
 BAN_FOR_MINUTES = Ban for %s
@@ -24,7 +24,7 @@ MSG_1 = You have been banned from this game server!
 MSG_2 = Reason: %s
 MSG_3 = Duration: %s
 MSG_6 = Banned by Admin: %s
-MSG_7 = You can complain about your ban at %s
+MSG_7 = You can appeal your ban at %s
 MSG_8 = You have been banned from this game server by %s
 MSG_9 = You are banned from this game server!
 MSG_10 = You are permanently banned from this game server.
